# kube-catalog

./: .bazelrc  .gitignore  BUILD.bazel  Gopkg.toml  Makefile  README.md
pkg/apis/catalog/: BUILD.bazel  register.go
pkg/apis/catalog/v1/: BUILD.bazel  register.go  types.go
pkg/client/: BUILD.bazel  config.go
pkg/util/: BUILD.bazel  construct.go
pkg/util/zappers/: BUILD.bazel  zappers.go
