load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "register.go",
        "types.go",
    ],
    importpath = "github.com/nilebox/kube-catalog/pkg/apis/catalog/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/catalog:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
    ],
)
